--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "build": "ttsc -p ."
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bunyan": "^1.8.15",
     "compression": "^1.7.4",
@@ -24,6 +25,7 @@
     "hpp": "^0.2.3",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
+    "querystring": "^0.2.1",
     "socket.io": "^4.6.1",
     "socket.io-adapter": "^2.5.2",
     "ttypescript": "^1.5.15",
