--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.14.2"
